<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtVerbose"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/hello_world" />

        <Button
            android:id="@+id/btnHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jose" />

        <Button
            android:id="@+id/btnOpenList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/ButtonSpace"
            android:text="@string/go_to_list" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_alumni" />

        <Button
            android:id="@+id/btnWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/pfe_web" />

    </LinearLayout>

</ScrollView>